testcases/error/missing_reset_statement.veryl
module missing_reset_statement {
    let clk: clock = 1;
    let rst: reset = 1;
    var a  : logic;

    always_ff {
        if_reset {} else {
            a = 0;
        }
    }
}
